--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,16 +4,19 @@
 <link href="/assets/css/syntax.css" rel="stylesheet">
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+    
+
+
+   @import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
     :root {
-        color: #675D50;
-        background-color: #F3DEBA;
+        color: #ccb7a7;
+        background-color: #38322b;
         font-size: 18;
     }
 
     a, p, h1, h2, h3 {
-      font-family: "Fira Code", serif;
+      font-family: "Spectral", serif;
       font-optical-sizing: auto;
       font-weight: <weight>;
       font-style: normal;
