Made the analytics only track when running through github pages and not on my local machine during testing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    {% if jekyll.environment == "production" %}
+        <script defer src="https://dietpi.tailcad0b.ts.net:3535/script.js" data-website-id="c46034de-8d0b-42eb-bde1-6f2c715b3018"></script>
+    {% endif %}
   </head>
   <body>
     {{ content }}
